# iceberg-evaluation

./: .gitignore  README.md  download_iceberg_ckpt.sh  evaluation.py  evaluation_utils.py  evaluation_visualisation.ipynb  iceberg_utils.py  massspecgym.py  pyproject.toml  run_cfmid_eval.py  run_evaluation.py  run_iceberg_evaluation.py  spectra_utils.py
