[project]
name = "iceberg-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cache-decorator>=2.2.0",
    "dreams",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "ms-pred",
    "numpy>=2.2.6",
    "pytorch-lightning>=1.6.5.post0",
    "setuptools>=59.5.0",
    "torch==2.4.0",
    "wandb>=0.19.11",
]

[tool.uv.sources]
ms-pred = { git = "https://github.com/mvisani/ms-pred", rev = "e45d0b3" }
wandb = { git = "https://github.com/wandb/wandb" }
dreams = { git = "https://github.com/mvisani/DreaMS" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "ruff>=0.11.12",
]
